--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -374,7 +374,7 @@
                             <p class="text-purple-700 text-sm">Когда сотрудник напоминает о бонусах и делает выбор удобным — гость чувствует заботу, а не продажу.</p>
                         </div>
                         
-                        <h4 class="text-xl font-medium text-indigo-700 mb-3">Работа с приложением и картами</h4>
+                        <h4 class="text-xl font-medium text-indigo-700 mb-3">Работа с приложением</h4>
 
                         <!-- 1. После фиксации заказа (Превентивный шаг) -->
                         <div class="mb-6 p-4 bg-indigo-50 rounded-xl border-l-4 border-indigo-400">
@@ -410,10 +410,16 @@
                             <h5 class="font-medium text-lg text-pink-800 mb-2">3. Счёт и карточки (Лояльность)</h5>
                             <ul class="list-disc list-inside space-y-2 text-gray-600 pl-4">
                                 <li>
-                                    <span class="font-medium">Карточки:</span> Со счётом принести карточки ЧИКО из расчёта: <span class="font-semibold">1 карточка на каждые 600 рублей счёта.</span>
+                                    <span class="font-medium">Со счетом</span> принести карточки ЧИКО.
                                 </li>
                                 <li>
-                                    <span class="font-medium">Выбор:</span> Дать гостю выбрать карточку. <br><span class="text-sm italic text-gray-500">«Пожалуйста, выберите карточку — одна на каждые 600 рублей вашего счёта.»</span>
+                                    <span class="font-medium">Выбор:</span> Дать гостю выбрать карточку.
+                                </li>
+                                <li>
+                                    <span class="font-medium">Из расчета:</span> 1 карточка на каждые 600 рублей счёта.
+                                </li>
+                                <li>
+                                    <span class="text-sm italic text-gray-500">Пример: «Пожалуйста выберите карточки- у вас счёт на 1800 рублей, вы можете выбрать 3 карточки»</span>
                                 </li>
                             </ul>
                         </div>
@@ -583,4 +589,6 @@
 
 </body>
 </html>
+
+
 
